# fast-api-lesson

./: Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
api/: main.py
api/routers/: done.py  task.py
api/schemas/: task.py
docs/: README.md
